--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -411,6 +411,8 @@ data:
                 {% set evening_motion = states('input_boolean.motion_activated_' ~ room ~ '_evening') %}
                 {% set night_motion = states('input_boolean.motion_activated_' ~ room ~ '_night') %}
                 
+                {% set smooth_transition = states('input_boolean.' ~ room ~ '_smooth_transition') %}
+                
                 {# Day-of-week helpers for each slot #}
                 {% set morning_days = {
                   'sunday': states('input_boolean.' ~ room ~ '_morning_sunday'),
@@ -530,12 +532,12 @@ data:
                   {% if night_days_display == '' %}{% set night_days_display = 'None' %}{% endif %}
                 {% endif %}
                 
-                | Time Slot | Scene | Activation Time | Days | Timer Enabled | Auto-On | Motion Activated |
-                |-----------|-------|----------------|------|---------------|---------|------------------|
-                | Morning | `morning` | {{ s1 }} | {{ morning_days_display }} | {% if morning_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if morning_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if morning_motion == 'on' %}✓{% else %}✗{% endif %} |
-                | Day | `day` | {{ s2 }} | {{ day_days_display }} | {% if day_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if day_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if day_motion == 'on' %}✓{% else %}✗{% endif %} |
-                | Evening | `evening` | {{ s3 }} | {{ evening_days_display }} | {% if evening_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if evening_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if evening_motion == 'on' %}✓{% else %}✗{% endif %} |
-                | Night | `night` | {{ s4 }} | {{ night_days_display }} | {% if night_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if night_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if night_motion == 'on' %}✓{% else %}✗{% endif %} |
+                | Time Slot | Scene | Activation Time | Days | Timer Enabled | Auto-On | Motion Activated | Smooth Transition |
+                |-----------|-------|----------------|------|---------------|---------|------------------|-------------------|
+                | Morning | `morning` | {{ s1 }} | {{ morning_days_display }} | {% if morning_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if morning_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if morning_motion == 'on' %}✓{% else %}✗{% endif %} | {% if smooth_transition == 'on' %}✓{% else %}✗{% endif %} |
+                | Day | `day` | {{ s2 }} | {{ day_days_display }} | {% if day_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if day_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if day_motion == 'on' %}✓{% else %}✗{% endif %} | {% if smooth_transition == 'on' %}✓{% else %}✗{% endif %} |
+                | Evening | `evening` | {{ s3 }} | {{ evening_days_display }} | {% if evening_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if evening_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if evening_motion == 'on' %}✓{% else %}✗{% endif %} | {% if smooth_transition == 'on' %}✓{% else %}✗{% endif %} |
+                | Night | `night` | {{ s4 }} | {{ night_days_display }} | {% if night_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if night_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if night_motion == 'on' %}✓{% else %}✗{% endif %} | {% if smooth_transition == 'on' %}✓{% else %}✗{% endif %} |
                 
                 {% set any_custom = morning_custom == 'on' or day_custom == 'on' or evening_custom == 'on' or night_custom == 'on' %}
                 {% if any_custom %}
@@ -795,6 +797,11 @@ data:
                 card:
                   type: vertical-stack
                   cards:
+                    - type: entities
+                      title: Room Settings
+                      entities:
+                        - entity: input_boolean.bedroom_smooth_transition
+                          name: Smooth Transition
                     - type: entities
                       title: Morning Schedule (Weekday)
                       entities:
@@ -1172,6 +1179,11 @@ data:
                   type: vertical-stack
                   cards:
                     - type: entities
+                      title: Room Settings
+                      entities:
+                        - entity: input_boolean.living_room_smooth_transition
+                          name: Smooth Transition
+                    - type: entities
                       title: Morning Schedule (Weekday)
                       entities:
                         - entity: input_boolean.living_room_morning_custom_time
@@ -1547,6 +1559,11 @@ data:
                 card:
                   type: vertical-stack
                   cards:
+                    - type: entities
+                      title: Room Settings
+                      entities:
+                        - entity: input_boolean.kitchen_smooth_transition
+                          name: Smooth Transition
                     - type: entities
                       title: Morning Schedule (Weekday)
                       entities:
@@ -1924,6 +1941,11 @@ data:
                   type: vertical-stack
                   cards:
                     - type: entities
+                      title: Room Settings
+                      entities:
+                        - entity: input_boolean.bathroom_smooth_transition
+                          name: Smooth Transition
+                    - type: entities
                       title: Morning Schedule (Weekday)
                       entities:
                         - entity: input_boolean.bathroom_morning_custom_time
@@ -2299,6 +2321,11 @@ data:
                 card:
                   type: vertical-stack
                   cards:
+                    - type: entities
+                      title: Room Settings
+                      entities:
+                        - entity: input_boolean.hallway_smooth_transition
+                          name: Smooth Transition
                     - type: entities
                       title: Morning Schedule (Weekday)
                       entities:
