--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -846,7 +846,9 @@ data:
                                             {{ target_br }}
                                           {% else %}
                                             {% set calculated = (current_br + (brightness_delta * step_progress)) | int %}
-                                            {{ [0, 255, calculated] | sort | list[1] }}
+                                            {% set sorted_vals = [0, 255, calculated] | sort %}
+                                            {% set clamped = sorted_vals[1] %}
+                                            {{ clamped }}
                                           {% endif %}
                                     - service: "light.turn_on"
                                       target:
